# vapi_personal_assistant_voice_agent

./: .dockerignore  .env.example  .gitignore  API_IMPLEMENTATION_COMPLETE.md  API_TESTING_GUIDE.md  API_TOOLS_DOCUMENTATION.md  CLIENT_REPORT.md  DEPLOYMENT.md  Dockerfile  README.md  RENDER_DEPLOYMENT_GUIDE.md  VAPI_IMPLEMENTATION_SUMMARY.md  VAPI_INTEGRATION_GUIDE.md  check_vapi_tools.py  env.example  fly.toml  pyproject.toml  render.yaml  requirements.txt  run.py  run_uv.py  tool_output.txt  update_prompt.py  vapi_assistant_config.json  vapi_system_prompt.md  verify_vapi_tools.py
.cursor/: context.json
ai-training-main/: .gitignore  README.md
docs/: Batch_20000_20250930181935_result (1).csv  Fontis Water API Summary.md  Innova-Water Project Documentation.txt  outbound system prompt.txt  system-behavior  system-prompt.txt  system-prompt.txtx
scripts/: __init__.py  cleanup.ps1  cleanup_project.py  create_standalone_tools.py  deploy_to_fly.ps1  deploy_with_keys.ps1  email_poll_worker.py  email_to_outbound_pipeline.py  ingest_email_csv_to_sheet.py  run_outbound_from_sheet.py  service_account_loader.py  setup_google_sheet_from_csv.py  setup_jotform_auto.py  setup_new_assistant_complete.py  start_dev.ps1  sync_all_tools_to_vapi.py  test_batch_processing.py  update_outbound_prompt.py  update_vapi_prompt.py  upload_company_knowledge_base.py
src/: __init__.py  config.py  main.py
src/core/: deps.py  (+2 more)
testing-protocol/: testing-protocol-v2.txt
tests/: README.md  __init__.py  conftest.py  test_customer_details.py  test_customer_search.py  test_delivery_intelligence.py  (+3 more)
(+56 files in other folders)
